Undo fixed header on mobile

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,18 +2,22 @@
 @use "../base/mixins" as *;
 
 header {
-    position: relative;
+    @media (min-width: $tablet) {
+        position: relative;
+    }
 
     .header-bkg {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 5;
-        background-color: rgba(0, 0, 0, 0.8);
-        backdrop-filter: blur(5px);
-        border-bottom: 1px solid $glow-outline;
-        box-shadow: 1px 1px 20px 5px $glow;
+        @media (min-width: $tablet) {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 5;
+            background-color: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(5px);
+            border-bottom: 1px solid $glow-outline;
+            box-shadow: 1px 1px 20px 5px $glow;
+        }
 
         .header-wrap {
             max-width: 1200px;
@@ -30,6 +34,12 @@ header {
             }
 
             nav {
+                display: none;
+
+                @media (min-width: $tablet) {
+                    display: block;
+                }
+
                 ul {
                     @include flex-row;
                     padding: 0;
